kubernetes/mock-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mockserver
  namespace: mockserver-ns
  labels:
    app: mockserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mockserver
  template:
    metadata:
      labels:
        app: mockserver
    spec:
      containers:
        - name: mockserver
          image: 835126668815.dkr.ecr.ap-south-1.amazonaws.com/ecr-testing-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: db-storage
              mountPath: /mock.db
              subPath: mock.db
      volumes:
        - name: db-storage
          emptyDir: {}
