kubernetes/mock-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mockserver-service
  namespace: mockserver
spec:
  selector:
    app: mockserver
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8000
